# funnel-rules-engine

./: LICENSE.md  Makefile  README.md  dev-packages.txt  dev-requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/rules_engine/: __init__.py  rules_engine.py
tests/: rule_test.py  rules_engine_test.py  select_rules_test.py
