[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100

[metadata]
name = funnel_rules_engine
version = attr: rules_engine.__version__
author = The Funnel Dev Team
author_email = open-source@funnel.io
description = A simple, generic rules engine.
keywords = ["rules engine"]
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
requires_python = ~=3.8
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Software Development :: Libraries
project_urls =
  Bug Reports = https://github.com/funnel-io/funnel-rules-engine/issues
  Source = https://github.com/funnel-io/funnel-rules-engine
url = https://github.com/funnel-io/funnel-rules-engine

[options]
package_dir =
  =src
packages=find:

[options.packages.find]
where = src
